refactor: 统一使用 List.of()/Map.of()/Set.of() 替代 Collections.emptyXxx()
遵循新的不可变集合规范，统一空集合创建方式：
- Collections.emptyList() → List.of()
- Collections.emptyMap() → Map.of()
- Collections.emptySet() → Set.of()
- Collections.unmodifiableList() → List.copyOf()（防御性拷贝场景）